--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: 'Montserrat', sans-serif;
+    color: #041549
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Jost', sans-serif;
+  }
+  h1 {
+    font-size: 32px;
+		font-weight: bold;
+  }
+  h2 {
+		font-size: 24px;
+		font-weight: bold;
+	}
+	h3 {
+		font-size: 18px;
+		font-weight: bold;
+	}
+  p {
+    font-size: 16px;
+		font-weight: 400;
+  }
+}
