--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;700&family=Montserrat:wght@400;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-family: 'Montserrat', sans-serif;
-    color: #041549
-  }
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Jost', sans-serif;
-  }
-  h1 {
-    font-size: 32px;
+	html {
+		font-family: "Montserrat", sans-serif;
+		color: #041549;
+	}
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: "Jost", sans-serif;
+	}
+	h1 {
+		font-size: 32px;
 		font-weight: bold;
-  }
-  h2 {
+	}
+	h2 {
 		font-size: 24px;
 		font-weight: bold;
 	}
@@ -24,8 +29,14 @@
 		font-size: 18px;
 		font-weight: bold;
 	}
-  p {
-    font-size: 16px;
+	p {
+		font-size: 16px;
 		font-weight: 400;
-  }
+	}
+
+	.react-time-picker > .react-time-picker__wrapper {
+		padding: 1rem;
+		border-radius: 5px;
+		border-color: #e5e7eb;
+	}
 }
