--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -37,6 +37,12 @@
 	p {
 		font-size: 16px;
 		font-weight: 400;
+	}
+
+	.react-time-picker > .react-time-picker__wrapper {
+		padding: 1rem;
+		border-radius: 5px;
+		border-color: #e5e7eb;
 	}
 }
 
