--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,9 +40,14 @@
 	}
 
 	.react-time-picker > .react-time-picker__wrapper {
-		padding: 1rem;
+		padding: 0.5rem;
 		border-radius: 5px;
-		border-color: #e5e7eb;
+		border-color: #802200;
+	}
+	.react-time-picker__inputGroup {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
